--- a/index.html
+++ b/index.html
@@ -28,16 +28,20 @@
           <nav class="header__menu">
             <ul class="header__list">
               <li>
-                <a href="#" class="header__link">NO DEPOSIT CASINOS</a>
+                <a href="./review-page.html" class="header__link"
+                  >NO DEPOSIT CASINOS</a
+                >
               </li>
               <li>
-                <a href="#" class="header__link">NEW CASINOS</a>
+                <a href="./news-category.html" class="header__link"
+                  >NEW CASINOS</a
+                >
               </li>
               <li>
-                <a href="#" class="header__link">LIVE</a>
+                <a href="./news-page.html" class="header__link">LIVE</a>
               </li>
               <li>
-                <a href="#" class="header__link">CASINOS</a>
+                <a href="./index.html" class="header__link">CASINOS</a>
               </li>
               <li>
                 <a href="#" class="header__link">SOFTWARES</a>
