--- a/index.html
+++ b/index.html
@@ -1441,7 +1441,7 @@
           </div>
 
           <div class="news-post__wrap">
-            <div>
+            <div class="news-card-on-idx">
               <img
                 srcset="
                   ./images/img-news-one.jpg    1x,
@@ -1462,7 +1462,7 @@
                 </svg>
               </button>
             </div>
-            <div>
+            <div class="news-card-on-idx">
               <img
                 srcset="
                   ./images/img-news-two.jpg    1x,
@@ -1483,7 +1483,7 @@
                 </svg>
               </button>
             </div>
-            <div>
+            <div class="news-card-on-idx">
               <img
                 srcset="
                   ./images/img-news-three.jpg    1x,
@@ -1504,7 +1504,7 @@
                 </svg>
               </button>
             </div>
-            <div>
+            <div class="news-card-on-idx">
               <img
                 srcset="
                   ./images/img-news-four.jpg    1x,
