--- a/review-page.html
+++ b/review-page.html
@@ -28,7 +28,9 @@
           <nav class="header__menu">
             <ul class="header__list">
               <li>
-                <a href="#" class="header__link">NO DEPOSIT CASINOS</a>
+                <a href="./review-page.html" class="header__link"
+                  >NO DEPOSIT CASINOS</a
+                >
               </li>
               <li>
                 <a href="./news-category.html" class="header__link"
@@ -36,7 +38,7 @@
                 >
               </li>
               <li>
-                <a href="#" class="header__link">LIVE</a>
+                <a href="./news-page.html" class="header__link">LIVE</a>
               </li>
               <li>
                 <a href="./index.html" class="header__link">CASINOS</a>
