--- a/news-page.html
+++ b/news-page.html
@@ -28,7 +28,9 @@
           <nav class="header__menu">
             <ul class="header__list">
               <li>
-                <a href="#" class="header__link">NO DEPOSIT CASINOS</a>
+                <a href="./review-page.html" class="header__link"
+                  >NO DEPOSIT CASINOS</a
+                >
               </li>
               <li>
                 <a href="./news-category.html" class="header__link"
@@ -36,7 +38,7 @@
                 >
               </li>
               <li>
-                <a href="#" class="header__link">LIVE</a>
+                <a href="./news-page.html" class="header__link">LIVE</a>
               </li>
               <li>
                 <a href="./index.html" class="header__link">CASINOS</a>
@@ -110,6 +112,219 @@
     </header>
     <main>
       <!-- !HERO -->
+
+      <section>
+        <div class="conteiner">
+          <div class="main-content">
+            <div class="content-top" style="display: flex; gap: 69px">
+              <div style="width: 1061px; height: 1791px; background-color: red">
+                <p class="user-name__date">12 September 2022</p>
+                <h3 class="user__title">Melhores Cases De Apostas</h3>
+                <picture>
+                  <source
+                    media="(min-width:768px )"
+                    srcset="
+                      ./images/gambling-img.jpg    1x,
+                      ./images/gambling-img@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width:20px )"
+                    srcset="
+                      ./images/gambling-img-mob.jpg    1x,
+                      ./images/gambling-img-mob@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    class="page-title__img"
+                    src="./images/gambling-img-mob.jpg"
+                    alt=""
+                  />
+                </picture>
+                <p class="user__text">
+                  Finding that perfect online casino for US players is no easy
+                  business, but CasinosLists is here to help! Scroll down to
+                  find which casinos open their virtual doors to citizens of the
+                  United States! Go ahead and take a look at our directory,
+                  because we’re sure the right casino for you is right below!
+                </p>
+                <p class="user__text">
+                  Finding that perfect online casino for US players is no easy
+                  business, but CasinosLists is here to help! Scroll down to
+                  find which casinos open their virtual doors to citizens of the
+                  United States! Go ahead and take a look at our directory,
+                  because we’re sure the right casino for you is right below!
+                </p>
+                <p class="user__text">
+                  Finding that perfect online casino for US players is no easy
+                  business, but CasinosLists is here to help! Scroll down to
+                  find which casinos open their virtual doors to citizens of the
+                  United States! Go ahead and take a look at our directory,
+                  because we’re sure the right casino for you is right below!
+                </p>
+              </div>
+              <div
+                style="width: 469px; height: 1791px; background-color: green"
+              >
+                <div class="news-post__wrap">
+                  <div class="news-card-on-news-cat">
+                    <img
+                      srcset="
+                        ./images/img-news-one.jpg    1x,
+                        ./images/img-news-one@2x.jpg 2x
+                      "
+                      src="./images/img-news-one.jpg"
+                      alt=""
+                      class="news-img"
+                    />
+
+                    <h3 class="news-title">
+                      THN THREE STARS: LINDHOLM, OETTINGER AND BUCHNEVICH STAND
+                      OUT
+                    </h3>
+                  </div>
+                  <div class="news-card-on-news-cat">
+                    <img
+                      srcset="
+                        ./images/img-news-two.jpg    1x,
+                        ./images/img-news-two@2x.jpg 2x
+                      "
+                      src="./images/img-news-two.jpg"
+                      alt=""
+                      class="news-img"
+                    />
+
+                    <h3 class="news-title">
+                      THN THREE STARS: LINDHOLM, OETTINGER AND BUCHNEVICH STAND
+                      OUT
+                    </h3>
+                  </div>
+                  <div class="news-card-on-news-cat">
+                    <img
+                      srcset="
+                        ./images/img-news-three.jpg    1x,
+                        ./images/img-news-three@2x.jpg 2x
+                      "
+                      src="./images/img-news-three.jpg"
+                      alt=""
+                      class="news-img"
+                    />
+
+                    <h3 class="news-title">
+                      THN THREE STARS: LINDHOLM, OETTINGER AND BUCHNEVICH STAND
+                      OUT
+                    </h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="last-news__wrap">
+              <div class="info-nav">
+                <a href="#" class="news-link">Last news</a>
+                <div class="nav-btns">
+                  <svg width="28" height="16">
+                    <use href="./images/symbol.svg#icon-inf-left" />
+                  </svg>
+                  <svg width="28" height="16">
+                    <use href="./images/symbol.svg#icon-inf-right" />
+                  </svg>
+                </div>
+              </div>
+              <div class="news-post__wrap">
+                <div class="news-card-on-news-cat">
+                  <img
+                    srcset="
+                      ./images/img-news-one.jpg    1x,
+                      ./images/img-news-one@2x.jpg 2x
+                    "
+                    src="./images/img-news-one.jpg"
+                    alt=""
+                    class="news-img"
+                  />
+                  <p class="news-date">12 September 2022</p>
+                  <h3 class="news-title">
+                    THN THREE STARS: LINDHOLM, OETTINGER AND BUCHNEVICH STAND
+                    OUT
+                  </h3>
+                  <button class="news-btn-more">
+                    Learn more
+                    <svg width="6" height="11">
+                      <use href="./images/symbol.svg#icon-right" />
+                    </svg>
+                  </button>
+                </div>
+                <div class="news-card-on-news-cat">
+                  <img
+                    srcset="
+                      ./images/img-news-two.jpg    1x,
+                      ./images/img-news-two@2x.jpg 2x
+                    "
+                    src="./images/img-news-two.jpg"
+                    alt=""
+                    class="news-img"
+                  />
+                  <p class="news-date">12 September 2022</p>
+                  <h3 class="news-title">
+                    THN THREE STARS: LINDHOLM, OETTINGER AND BUCHNEVICH STAND
+                    OUT
+                  </h3>
+                  <button class="news-btn-more">
+                    Learn more
+                    <svg width="6" height="11">
+                      <use href="./images/symbol.svg#icon-right" />
+                    </svg>
+                  </button>
+                </div>
+                <div class="news-card-on-news-cat">
+                  <img
+                    srcset="
+                      ./images/img-news-three.jpg    1x,
+                      ./images/img-news-three@2x.jpg 2x
+                    "
+                    src="./images/img-news-three.jpg"
+                    alt=""
+                    class="news-img"
+                  />
+                  <p class="news-date">12 September 2022</p>
+                  <h3 class="news-title">
+                    THN THREE STARS: LINDHOLM, OETTINGER AND BUCHNEVICH STAND
+                    OUT
+                  </h3>
+                  <button class="news-btn-more">
+                    Learn more
+                    <svg width="6" height="11">
+                      <use href="./images/symbol.svg#icon-right" />
+                    </svg>
+                  </button>
+                </div>
+                <div class="news-card-on-news-cat">
+                  <img
+                    srcset="
+                      ./images/img-news-four.jpg    1x,
+                      ./images/img-news-four@2x.jpg 2x
+                    "
+                    src="./images/img-news-four.jpg"
+                    alt=""
+                    class="news-img"
+                  />
+                  <p class="news-date">12 September 2022</p>
+                  <h3 class="news-title">
+                    THN THREE STARS: LINDHOLM, OETTINGER AND BUCHNEVICH STAND
+                    OUT
+                  </h3>
+                  <button class="news-btn-more">
+                    Learn more
+                    <svg width="6" height="11">
+                      <use href="./images/symbol.svg#icon-right" />
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- !FOOTER SECTION -->
       <section class="footer">
