--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
           <nav class="header__menu">
             <ul class="header__list">
               <li>
-                <a href="./review-page.html" class="header__link"
-                  >NO DEPOSIT CASINOS</a
-                >
+                <a href="#" class="header__link">NO DEPOSIT CASINOS</a>
               </li>
               <li>
                 <a href="./news-category.html" class="header__link"
@@ -44,7 +42,7 @@
                 <a href="./index.html" class="header__link">CASINOS</a>
               </li>
               <li>
-                <a href="#" class="header__link">SOFTWARES</a>
+                <a href="./review-page.html" class="header__link">SOFTWARES</a>
               </li>
               <li><a href="#" class="header__link">COUNTRIES</a></li>
               <li>
