pre hero padding

--- a/review-page.html
+++ b/review-page.html
@@ -110,21 +110,97 @@
     </header>
     <main>
       <!-- !HERO -->
-      <section class="hero">
+      <section class="hero rewiew-page">
         <div class="conteiner">
-          <h1 class="hero__text-top">Casas De Apostas</h1>
-          <h2 class="hero__text-second">Melhores Cases De Apostas</h2>
-          <p class="hero__text">
-            Finding that perfect online casino for US players is no easy
-            business, but CasinosLists is here to help! Scroll down to find
-            <br />
-            which casinos open their virtual doors to citizens of the United
-            States! Go ahead and take a look at our directory, <br />
-            because we’re sure the right casino for you is right below!
-          </p>
+          <div class="hero-main">
+            <h1 class="hero__text-top">Review and bonuses</h1>
+            <h2 class="hero__text-second">Parimatch Casino</h2>
+            <p class="hero__text hero__text--rev-page">
+              Finding that perfect online casino for US players is no easy
+              business, but CasinosLists is here to help! Scroll down to find
+              <br />
+              which casinos open their virtual doors to citizens of the United
+              States! Go ahead and take a look at our directory, <br />
+              because we’re sure the right casino for you is right below!
+            </p>
+
+            <div class="hero-rating__wrap">
+              <div class="hero-rating__stars">
+                <svg class="" width="22" height="21.16">
+                  <use href="./images/symbol.svg#icon-hero-star-green" />
+                </svg>
+                <svg class="" width="22" height="21.16">
+                  <use href="./images/symbol.svg#icon-hero-star-green" />
+                </svg>
+                <svg class="" width="22" height="21.16">
+                  <use href="./images/symbol.svg#icon-hero-star-green" />
+                </svg>
+                <svg class="" width="22" height="21.16">
+                  <use href="./images/symbol.svg#icon-hero-star-green" />
+                </svg>
+                <svg class="" width="22" height="21.16">
+                  <use href="./images/symbol.svg#icon-hero-star-gray" />
+                </svg>
+              </div>
+              <div class="hero-rating__ukr">
+                <!-- <svg width="58" height="46">
+                <use href="./images/symbol.svg#icon-shield" />
+              </svg> -->
+                <img src="./images/pm-shield.png" alt="" />
+                <p class="hero-rating__ukr--text">
+                  Players from Ukraine - accepted!
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
+      <section>
+        <div class="conteiner pm-hero__table">
+          <div class="hero-second">
+            <img
+              class="hero-second__pm-logo"
+              srcset="
+                ./images/pari-match-yellow.png    1x,
+                ./images/pari-match-yellow@2x.png 2x
+              "
+              src="./images/pari-match-yellow.png"
+              alt=""
+            />
+            <table>
+              <tr class="table-row">
+                <td class="row__title">Company:</td>
+                <td class="row__data">Suncast Furure N.V</td>
+              </tr>
+              <tr class="table-row">
+                <td class="row__title">Launched:</td>
+                <td class="row__data">2000</td>
+              </tr>
+              <tr class="table-row">
+                <td class="row__title">Licenses:</td>
+                <td class="row__data">
+                  Curacao eGaming. <span class="row__data--link">See All</span>
+                </td>
+              </tr>
+              <tr class="table-row">
+                <td class="row__title">Min. deposit:</td>
+                <td class="row__data">10</td>
+              </tr>
+              <tr class="table-row">
+                <td class="row__title">Min. withdrawal:</td>
+                <td class="row__data">10</td>
+              </tr>
+              <tr class="table-row">
+                <td class="row__title">Currency</td>
+                <td class="row__data row__data--currency">
+                  USD, EUR, UAH, RUB, PLN, mBTC, BTC, AZN, KZT, MDL
+                </td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </section>
       <!-- !FOOTER SECTION -->
       <section class="footer">
         <div class="conteiner">
