--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <main>
       <!-- !HERO -->
       <section class="hero">
-        <div class="conteiner">
+        <div class="conteiner hero__conteiner">
           <h1 class="hero__text-top">Casas De Apostas</h1>
           <h2 class="hero__text-second">Melhores Cases De Apostas</h2>
           <p class="hero__text">
@@ -180,7 +180,7 @@
                       ./images/benato-mob.png    1x,
                       ./images/benato-mob@2x.png 2x
                     " />
-                  <img src="./images//benato-mob.png" alt=""
+                  <img src="./images/benato-mob.png" alt=""
                 /></picture>
 
                 <div class="block-wrap">
@@ -309,7 +309,7 @@
                       ./images/benato-mob.png    1x,
                       ./images/benato-mob@2x.png 2x
                     " />
-                  <img src="./images//benato-mob.png" alt=""
+                  <img src="./images/benato-mob.png" alt=""
                 /></picture>
 
                 <div class="block-wrap">
@@ -437,7 +437,7 @@
                       ./images/benato-mob.png    1x,
                       ./images/benato-mob@2x.png 2x
                     " />
-                  <img src="./images//benato-mob.png" alt=""
+                  <img src="./images/benato-mob.png" alt=""
                 /></picture>
 
                 <div class="block-wrap">
@@ -565,7 +565,7 @@
                       ./images/benato-mob.png    1x,
                       ./images/benato-mob@2x.png 2x
                     " />
-                  <img src="./images//benato-mob.png" alt=""
+                  <img src="./images/benato-mob.png" alt=""
                 /></picture>
 
                 <div class="block-wrap">
@@ -694,7 +694,7 @@
                       ./images/benato-mob.png    1x,
                       ./images/benato-mob@2x.png 2x
                     " />
-                  <img src="./images//benato-mob.png" alt=""
+                  <img src="./images/benato-mob.png" alt=""
                 /></picture>
 
                 <div class="block-wrap">
@@ -822,7 +822,7 @@
                       ./images/benato-mob.png    1x,
                       ./images/benato-mob@2x.png 2x
                     " />
-                  <img src="./images//benato-mob.png" alt=""
+                  <img src="./images/benato-mob.png" alt=""
                 /></picture>
 
                 <div class="block-wrap">
@@ -950,7 +950,7 @@
                       ./images/benato-mob.png    1x,
                       ./images/benato-mob@2x.png 2x
                     " />
-                  <img src="./images//benato-mob.png" alt=""
+                  <img src="./images/benato-mob.png" alt=""
                 /></picture>
 
                 <div class="block-wrap">
@@ -1078,7 +1078,7 @@
                       ./images/benato-mob.png    1x,
                       ./images/benato-mob@2x.png 2x
                     " />
-                  <img src="./images//benato-mob.png" alt=""
+                  <img src="./images/benato-mob.png" alt=""
                 /></picture>
 
                 <div class="block-wrap">
@@ -1206,7 +1206,7 @@
                       ./images/benato-mob.png    1x,
                       ./images/benato-mob@2x.png 2x
                     " />
-                  <img src="./images//benato-mob.png" alt=""
+                  <img src="./images/benato-mob.png" alt=""
                 /></picture>
 
                 <div class="block-wrap">
