--- a/news-category.html
+++ b/news-category.html
@@ -184,7 +184,7 @@
                   </svg>
                 </div>
               </div>
-              <div class="news-post__wrap">
+              <div class="news-post__wrap scroll">
                 <div class="news-card-on-news-cat">
                   <img
                     srcset="
@@ -287,7 +287,7 @@
                   </svg>
                 </div>
               </div>
-              <div class="news-post__wrap">
+              <div class="news-post__wrap scroll">
                 <div class="news-card-on-news-cat">
                   <img
                     srcset="
@@ -390,7 +390,7 @@
                   </svg>
                 </div>
               </div>
-              <div class="news-post__wrap">
+              <div class="news-post__wrap scroll">
                 <div class="news-card-on-news-cat">
                   <img
                     srcset="
