--- a/news-page.html
+++ b/news-page.html
@@ -391,7 +391,7 @@
                 </svg>
               </div>
             </div>
-            <div class="news-post__wrap">
+            <div class="news-post__wrap scroll">
               <div class="news-card-on-news-cat">
                 <img
                   srcset="
