--- a/review-page.html
+++ b/review-page.html
@@ -1228,13 +1228,16 @@
                   </tr>
                   <tr class="attributes__item">
                     <td>
-                      Curacao eGaming. <span class="green-color">See All</span>
+                      Curacao eGaming.
+                      <span class="green-color"><a href="#">See All</a></span>
                     </td>
                     <td>
-                      Curacao eGaming. <span class="green-color">See All</span>
+                      Curacao eGaming.
+                      <span class="green-color"><a href="#">See All</a></span>
                     </td>
                     <td>
-                      Curacao eGaming. <span class="green-color">See All</span>
+                      Curacao eGaming.
+                      <span class="green-color"><a href="#">See All</a></span>
                     </td>
                   </tr>
                   <tr class="attributes__title">
@@ -1310,7 +1313,12 @@
                     <use href="./images/symbol.svg#icon-faq-arrow" />
                   </svg>
                 </button>
-                <div class=""></div>
+                <div class="faq-item">
+                  <ul>
+                    <li>Question</li>
+                    <li>-Answer</li>
+                  </ul>
+                </div>
               </li>
               <li>
                 <button type="button" class="faq-open__btn">
@@ -1319,7 +1327,12 @@
                     <use href="./images/symbol.svg#icon-faq-arrow" />
                   </svg>
                 </button>
-                <div class=""></div>
+                <div class="faq-item">
+                  <ul>
+                    <li>Question</li>
+                    <li>-Answer</li>
+                  </ul>
+                </div>
               </li>
               <li>
                 <button type="button" class="faq-open__btn">
@@ -1328,7 +1341,12 @@
                     <use href="./images/symbol.svg#icon-faq-arrow" />
                   </svg>
                 </button>
-                <div class=""></div>
+                <div class="faq-item">
+                  <ul>
+                    <li>Question</li>
+                    <li>-Answer</li>
+                  </ul>
+                </div>
               </li>
               <li>
                 <button type="button" class="faq-open__btn">
@@ -1337,7 +1355,12 @@
                     <use href="./images/symbol.svg#icon-faq-arrow" />
                   </svg>
                 </button>
-                <div class=""></div>
+                <div class="faq-item">
+                  <ul>
+                    <li>Question</li>
+                    <li>-Answer</li>
+                  </ul>
+                </div>
               </li>
             </ul>
           </div>
