--- a/index.html
+++ b/index.html
@@ -1438,7 +1438,7 @@
             </div>
           </div>
 
-          <div class="news-post__wrap">
+          <div class="news-post__wrap scroll">
             <div class="news-card-on-idx">
               <img
                 srcset="
@@ -1638,7 +1638,7 @@
             </div>
           </div>
 
-          <div class="offer-cards__block">
+          <div class="offer-cards__block scroll">
             <div class="deposit-offer-card caesars">
               <img
                 srcset="./images/caesars.png 1x, ./images/caesars@2x.png 2x"
@@ -1895,7 +1895,7 @@
 
           <div class="deposit-options">
             <h3 class="dep-title">Deposit Options</h3>
-            <p class="dep-text">
+            <p class="dep-text scroll">
               Both casino games online and online sports betting are major parts
               of the gambling industry. These pastimes are in high demand
               nowadays since they allow people to place bets from their homes.
