--- a/review-page.html
+++ b/review-page.html
@@ -471,7 +471,7 @@
             </div>
 
             <div class="deposit-options">
-              <p class="dep-text">
+              <p class="dep-text scroll">
                 Both casino games online and online sports betting are major
                 parts of the gambling industry. These pastimes are in high
                 demand nowadays since they allow people to place bets from their
@@ -649,7 +649,7 @@
               </p>
             </div>
           </div>
-          <div class="offer-cards__block">
+          <div class="offer-cards__block scroll">
             <div class="deposit-offer-card caesars">
               <img
                 srcset="./images/caesars.png 1x, ./images/caesars@2x.png 2x"
@@ -910,7 +910,7 @@
             </div>
 
             <div class="deposit-options">
-              <p class="dep-text">
+              <p class="dep-text scroll">
                 Both casino games online and online sports betting are major
                 parts of the gambling industry. These pastimes are in high
                 demand nowadays since they allow people to place bets from their
